--- a/EnodebIntegration/src/view/RmvDefaultConfig.fxml
+++ b/EnodebIntegration/src/view/RmvDefaultConfig.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -44,7 +45,7 @@
                      </padding>
                   </HBox>
                   <Label text="Preview MML command" />
-                  <Label fx:id="mmlComandRmvDefault" textFill="#00ab39" />
+                  <TextArea fx:id="mmlComandRmvDefault" editable="false" prefHeight="90.0" />
                </children>
             </VBox>
          </children>
