--- a/EnodebIntegration/src/view/ConfigDeviceData.fxml
+++ b/EnodebIntegration/src/view/ConfigDeviceData.fxml
@@ -149,6 +149,38 @@
                         <TextArea fx:id="mmlPreviewTableFourDeviceData" editable="false" maxHeight="150.0" minHeight="-Infinity" prefHeight="150.0" VBox.vgrow="ALWAYS" />
                      </children>
                   </VBox>
+                  <VBox alignment="TOP_CENTER" spacing="5.0">
+                     <children>
+                        <Label text="TABLE 5: //Add RRU/RFU (ADD RRU)" textFill="#00ab1f" />
+                        <HBox spacing="10.0">
+                           <children>
+                              <MenuButton minWidth="-Infinity" mnemonicParsing="false" prefWidth="103.0" text="Opciones">
+                                 <items>
+                                    <MenuItem mnemonicParsing="false" onAction="#onAddTableFiveDeviceData" text="Agregar" />
+                                    <MenuItem mnemonicParsing="false" onAction="#onUpdateTableFiveDeviceData" text="Actualizar" />
+                                    <MenuItem mnemonicParsing="false" onAction="#onDeleteTableFiveDeviceData" text="Eliminar" />
+                                    <MenuItem mnemonicParsing="false" onAction="#onDuplicarTableFiveDeviceData" text="Duplicar" />
+                                 </items>
+                              </MenuButton>
+                              <ScrollPane fitToHeight="true" minHeight="-Infinity" prefHeight="150.0" HBox.hgrow="ALWAYS">
+                                 <content>
+                                    <AnchorPane>
+                                       <children>
+                                          <TableView fx:id="tableFiveDeviceData" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </ScrollPane>
+                           </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </HBox>
+                        <Label text="MML comand //Add RRU/RFU (ADD RRU)" />
+                        <TextArea fx:id="mmlPreviewTableFiveDeviceData" editable="false" maxHeight="150.0" minHeight="-Infinity" prefHeight="150.0" VBox.vgrow="ALWAYS" />
+                     </children>
+                  </VBox>
+                  <Separator prefWidth="200.0" />
                </children>
             </VBox>
          </children>
